--- a/Sagemaker_Models/PrePostLaunch_28d/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/PrePostLaunch_28d/PrePostLaunch_28d.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install lightgbm"
+    "!pip install lightgbm"
    ]
   },
   {
@@ -21,8 +21,9 @@
     "import os\n",
     "import io\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.ticker as mtick\n",
+    "import boto3\n",
+    "import sys\n",
+    "\n",
     "from pre_post_launch.model import ModelMain\n",
     "from pre_post_launch.data_preprocessing import DataPreprocessing\n",
     "\n",
@@ -79,8 +80,6 @@
     }
    ],
    "source": [
-    "import boto3\n",
-    "import sys\n",
     "s3 = boto3.resource('s3')\n",
     "bucket = s3.Bucket('hbo-ingest-datascience-content-dev')\n",
     "# Iterates through all the objects, doing the pagination for you. Each obj\n",
@@ -867,9 +866,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_python3",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_python3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -881,7 +880,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
