--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -2,15 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install lightgbm"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -20,19 +11,19 @@
     "import itertools as it\n",
     "import os\n",
     "import io\n",
+    "import logging\n",
     "\n",
     "import boto3\n",
     "import sys\n",
     "\n",
-    "from pre_post_launch.model import ModelMain\n",
-    "from pre_post_launch.data_preprocessing import DataPreprocessing\n",
+    "from lib.model import ModelMain\n",
     "\n",
     "# configs\n",
-    "from pre_post_launch.config import percent_data_process_info\n",
-    "from pre_post_launch.config import metadata_process_info\n",
-    "from pre_post_launch.config import default_params_dict as params_dict\n",
-    "from pre_post_launch.config import model_name_list\n",
-    "from pre_post_launch.config import params_tunning_dict"
+    "from lib.config import percent_data_process_info\n",
+    "from lib.config import metadata_process_info\n",
+    "from lib.config import default_params_dict as params_dict\n",
+    "from lib.config import model_name_list\n",
+    "from lib.config import params_tunning_dict"
    ]
   },
   {
@@ -80,6 +71,9 @@
     }
    ],
    "source": [
+    "logger = logging.getLogger()\n",
+    "logger.info(f'Loading inputs')\n",
+    "\n",
     "s3 = boto3.resource('s3')\n",
     "bucket = s3.Bucket('hbo-ingest-datascience-content-dev')\n",
     "# Iterates through all the objects, doing the pagination for you. Each obj\n",
@@ -87,11 +81,12 @@
     "# get to get the whole body.\n",
     "for obj in bucket.objects.all():\n",
     "    key = obj.key\n",
-    "    print('reading csv file {}'.format(key))\n",
-    "    body = obj.get()['Body']\n",
-    "    var_name = key.split('.')[0]\n",
-    "    exec(\"{}=pd.read_csv(body, na_values = [r'\\\\\\\\N'])\".format(var_name))\n",
-    "    exec(\"{}.columns = {}.columns.str.lower()\".format(var_name, var_name))"
+    "    if 'sagemaker' not in key:\n",
+    "        logger.info('Loading csv file {}'.format(key))\n",
+    "        body = obj.get()['Body']\n",
+    "        var_name = key.split('.')[0]\n",
+    "        exec(\"{}=pd.read_csv(body, na_values = [r'\\\\\\\\N'])\".format(var_name))\n",
+    "        exec(\"{}.columns = {}.columns.str.lower()\".format(var_name, var_name))"
    ]
   },
   {
@@ -137,206 +132,11 @@
    ],
    "source": [
     "# start a object\n",
+    "logger.info('Setting up the prediction model')\n",
     "nfold = 10\n",
     "cv_func = ModelMain(data_list, metadata_process_info['label_columns'], metadata_process_info['num_columns'])\n",
     "# movie only\n",
     "#cv_func.df = cv_func.df.loc[cv_func.df['content_category']=='movies',:]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Parameter Tunning (when 3 days of data is available)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Step 2 (optional): Tune the Parameters\n",
-    "\n",
-    "If skipped the default param values in the 'config.py' file will be used "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "keeps the titles above 80.0 percentile day1 viewed over all titles only\n",
-      "only 1543 titles considered\n",
-      "X and y are ready based on the input params\n"
-     ]
-    }
-   ],
-   "source": [
-    "'''\n",
-    "If True, trained the model with maximum percent view data length, then predict, \n",
-    "if False, for each length of data build a model \n",
-    "(e.g. if day3 is the max length of data, then build day1 model, day2 model, day3 model)\n",
-    "'''\n",
-    "percent_data_process_info['exact_X_pred'] = False\n",
-    "\n",
-    "'''\n",
-    "the name of the model to do parameter tunning\n",
-    "'''\n",
-    "model_name = 'lgb'\n",
-    "\n",
-    "'''\n",
-    "max_num_day:The length of percent view and view through portion data\n",
-    "'''\n",
-    "percent_data_process_info['max_num_day']=3\n",
-    "\n",
-    "# get X and y before tunning\n",
-    "cv_func.get_X_y(percent_data_process_info, \n",
-    "                     metadata_process_info, \n",
-    "                     day001_popularity_threshold = percentile_used)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "parameter combination 1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages/lightgbm/engine.py:148: UserWarning: Found `num_boost_round` in params. Will use it instead of argument\n",
-      "  _log_warning(\"Found `{}` in params. Will use it instead of argument\".format(alias))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "parameter combination 2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages/lightgbm/engine.py:148: UserWarning: Found `num_boost_round` in params. Will use it instead of argument\n",
-      "  _log_warning(\"Found `{}` in params. Will use it instead of argument\".format(alias))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "parameter combination 3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages/lightgbm/engine.py:148: UserWarning: Found `num_boost_round` in params. Will use it instead of argument\n",
-      "  _log_warning(\"Found `{}` in params. Will use it instead of argument\".format(alias))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "parameter combination 4\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages/lightgbm/engine.py:148: UserWarning: Found `num_boost_round` in params. Will use it instead of argument\n",
-      "  _log_warning(\"Found `{}` in params. Will use it instead of argument\".format(alias))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "parameter combination 5\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages/lightgbm/engine.py:148: UserWarning: Found `num_boost_round` in params. Will use it instead of argument\n",
-      "  _log_warning(\"Found `{}` in params. Will use it instead of argument\".format(alias))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "parameter combination 6\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages/lightgbm/engine.py:148: UserWarning: Found `num_boost_round` in params. Will use it instead of argument\n",
-      "  _log_warning(\"Found `{}` in params. Will use it instead of argument\".format(alias))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "parameter combination 7\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages/lightgbm/engine.py:148: UserWarning: Found `num_boost_round` in params. Will use it instead of argument\n",
-      "  _log_warning(\"Found `{}` in params. Will use it instead of argument\".format(alias))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "parameter combination 8\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages/lightgbm/engine.py:148: UserWarning: Found `num_boost_round` in params. Will use it instead of argument\n",
-      "  _log_warning(\"Found `{}` in params. Will use it instead of argument\".format(alias))\n"
-     ]
-    }
-   ],
-   "source": [
-    "'''\n",
-    "inputs:\n",
-    "model_name: name of the model to tune, only lgb available for now\n",
-    "params_tunning_dict: values for each parameters, new parameters could be added, old could be deleted\n",
-    "percent_data_process_info: parameters related to post-launch viewership\n",
-    "nfolds: number of folds to use\n",
-    "'''\n",
-    "\n",
-    "cv_func.parameter_tunning(model_name, \n",
-    "                          params_tunning_dict, \n",
-    "                          percent_data_process_info,\n",
-    "                          nfold = nfold)\n"
    ]
   },
   {
@@ -350,19 +150,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 3: Make Prediction\n",
+    "### Step 2: Make Prediction\n",
     "Note: Because it is a post launch prediction, only the titles with partial percent view and view through portion data will be predicted"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# set the parameter to the one that minimize the smape\n",
-    "params_dict = cv_func.min_smape_param['min_smape_original']\n",
-    "percent_data_process_info['exact_X_pred'] = False"
    ]
   },
   {
@@ -733,11 +522,11 @@
     "Get the prediction tarjectory over length of data\n",
     "'''\n",
     "\n",
+    "model_name = 'lgb'\n",
+    "model_name_list = ['lgb']\n",
+    "percent_data_process_info['exact_X_pred'] = False\n",
     "output_flag = False\n",
     "percent_data_process_info_copy = dict(percent_data_process_info)\n",
-    "trained_model_list = []\n",
-    "train_data = []\n",
-    "test_data = []\n",
     "\n",
     "for day in [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21]:\n",
     "    # renew the percent_data_process_info data very time\n",
@@ -745,16 +534,28 @@
     "    # just to make the values in the dict back to the initial values\n",
     "    percent_data_process_info = dict(percent_data_process_info_copy)\n",
     "    percent_data_process_info['max_num_day'] = day\n",
-    "    model_name_list = ['lgb']\n",
+    "    \n",
+    "    # get x and y\n",
+    "    logger.info('Get X and y for day {}'.format(day))\n",
     "    cv_func.get_X_y(percent_data_process_info, \n",
     "                     metadata_process_info, \n",
     "                     day001_popularity_threshold = percentile_used)\n",
+    "    # tune parameter\n",
+    "    logger.info('Tune parameter for day {}'.format(day))\n",
+    "    cv_func.parameter_tunning(model_name, \n",
+    "                          params_tunning_dict, \n",
+    "                          percent_data_process_info,\n",
+    "                          nfold = nfold)\n",
+    "    params_dict = cv_func.min_smape_param['min_smape_original']\n",
+    "    param_stats = cv_func.parameter_tunning_stats\n",
+    "    logger.info('SMAPE for all titles {}'.format(param_stats['min_smape_all']))\n",
+    "    logger.info('SMAPE for the originals {}'.format(param_stats['min_smape_original']))\n",
+    "    \n",
+    "    # make prediction\n",
+    "    logger.info('Making prediction for day {}'.format(day))\n",
     "    cv_func.predict_new_titles(model_name_list, \n",
     "                               params_dict, \n",
     "                               percent_data_process_info)\n",
-    "    trained_model_list.append(cv_func.trained_model)\n",
-    "    train_data.append(cv_func.X_base)\n",
-    "    test_data.append(cv_func.X_pred)\n",
     "    \n",
     "    if output_flag:\n",
     "        new_title_output = new_title_output.merge(cv_func.new_title_output, \n",
@@ -768,29 +569,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nFill in the title names in the format below to get the predictions\\n*The title with 28 days of history does not show in the output here\\n'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''\n",
-    "Fill in the title names in the format below to get the predictions\n",
-    "*The title with 28 days of history does not show in the output here\n",
-    "'''"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -801,7 +579,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 4: Write the prediction result to S3"
+    "### Step 3: Write the prediction result to S3"
    ]
   },
   {
@@ -821,6 +599,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "logger.info('Writing prediction over time to S3 as an csv file')\n",
     "csv_buffer = io.StringIO()\n",
     "new_title_output.to_csv(csv_buffer, index = False)\n",
     "content = csv_buffer.getvalue()\n",
@@ -847,6 +626,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "logger.info('Writing past prediction to S3 as an csv file')\n",
     "csv_buffer = io.StringIO()\n",
     "last_pred.to_csv(csv_buffer, index = False)\n",
     "content = csv_buffer.getvalue()\n",
