--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -156,9 +156,9 @@
     "output_flag = False\n",
     "percent_data_process_info_copy = dict(percent_data_process_info)\n",
     "\n",
-    "for day in [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21]:\n",
+    "for day in [1,2,3]:\n",
     "    # renew the percent_data_process_info data very time\n",
-    "    from pre_post_launch.config import percent_data_process_info\n",
+    "    from lib.config import percent_data_process_info\n",
     "    # just to make the values in the dict back to the initial values\n",
     "    percent_data_process_info = dict(percent_data_process_info_copy)\n",
     "    percent_data_process_info['max_num_day'] = day\n",
@@ -244,7 +244,7 @@
    "outputs": [],
    "source": [
     "last_pred = new_title_output.loc[:,new_title_output.columns.str.contains('lgb')].ffill(axis=1).iloc[:,-1]\n",
-    "last_pred = new_title_output[['title_name']].merge(last_pred, left_index = True, right_index = True).rename(columns = {'day_21_lgb':'last_pred'})\n",
+    "last_pred = new_title_output[['title_name']].merge(last_pred, left_index = True, right_index = True).rename(columns = {new_title_output.columns[-1]:'last_pred'})\n",
     "last_pred = last_pred.sort_values('last_pred', ascending = False)"
    ]
   },
