--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -178,6 +178,8 @@
     "    param_stats = cv_func.parameter_tunning_stats\n",
     "    logger.info('SMAPE for all titles {}'.format(param_stats['min_smape_all']))\n",
     "    logger.info('SMAPE for the originals {}'.format(param_stats['min_smape_original']))\n",
+    "    print('SMAPE for all titles {}'.format(param_stats['min_smape_all']))\n",
+    "    print('SMAPE for the originals {}'.format(param_stats['min_smape_original']))\n",
     "    \n",
     "    # make prediction\n",
     "    logger.info('Making prediction for day {}'.format(day))\n",
@@ -185,15 +187,24 @@
     "                               params_dict, \n",
     "                               percent_data_process_info)\n",
     "    \n",
+    "    # process the output\n",
+    "    cur_new_title_output = cv_func.new_title_output\n",
+    "    pred_column = cur_new_title_output.columns[cur_new_title_output.columns.str.contains('lgb')][0]\n",
+    "    pred_day = int(pred_column.split('_')[1])\n",
+    "    cur_new_title_output['pred_day'] = pred_day\n",
+    "    cur_new_title_output = cur_new_title_output.rename(columns = {pred_column:'percent_view_pred'})\n",
+    "    \n",
     "    if output_flag:\n",
-    "        new_title_output = new_title_output.merge(cv_func.new_title_output, \n",
-    "                                                  how = 'outer', \n",
-    "                                                  on = ['title_name', 'match_id', 'target', 'program_type'])\n",
+    "        new_title_output = pd.concat([new_title_output,cur_new_title_output], axis = 0)\n",
     "    else:\n",
-    "        new_title_output = cv_func.new_title_output\n",
+    "        new_title_output = cur_new_title_output\n",
     "        output_flag = True\n",
     "        \n",
-    "new_title_output = new_title_output.drop(columns = ['target', 'program_type']).sort_values('day_1_lgb', ascending = False)"
+    "new_title_output = new_title_output.drop(columns = ['target']).sort_values(['title_name','pred_day'])\n",
+    "new_title_output = new_title_output[['title_name','match_id'\n",
+    "                                     ,'match_id_platform','platform_name'\n",
+    "                                     , 'program_type'\n",
+    "                                     ,'pred_day', 'percent_view_pred']]\n"
    ]
   },
   {
@@ -232,34 +243,7 @@
     "new_title_output.to_csv(csv_buffer, index = False)\n",
     "content = csv_buffer.getvalue()\n",
     "\n",
-    "filename = 'prediction_over_time.csv'\n",
-    "\n",
-    "to_s3(filename, content)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "last_pred = new_title_output.loc[:,new_title_output.columns.str.contains('lgb')].ffill(axis=1).iloc[:,-1]\n",
-    "last_pred = new_title_output[['title_name']].merge(last_pred, left_index = True, right_index = True).rename(columns = {new_title_output.columns[-1]:'last_pred'})\n",
-    "last_pred = last_pred.sort_values('last_pred', ascending = False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "logger.info('Writing past prediction to S3 as an csv file')\n",
-    "csv_buffer = io.StringIO()\n",
-    "last_pred.to_csv(csv_buffer, index = False)\n",
-    "content = csv_buffer.getvalue()\n",
-    "\n",
-    "filename = 'last_prediction.csv'\n",
+    "filename = 'new_title_prediction.csv'\n",
     "\n",
     "to_s3(filename, content)"
    ]
