--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -156,7 +156,7 @@
     "output_flag = False\n",
     "percent_data_process_info_copy = dict(percent_data_process_info)\n",
     "\n",
-    "for day in [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26]:\n",
+    "for day in range(0,27):\n",
     "    # renew the percent_data_process_info data very time\n",
     "    from lib.config import percent_data_process_info\n",
     "    # just to make the values in the dict back to the initial values\n",
