--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -165,11 +165,13 @@
     "    \n",
     "    # get x and y\n",
     "    logger.info('Get X and y for day {}'.format(day))\n",
+    "    print('Get X and y for day {}'.format(day))\n",
     "    cv_func.get_X_y(percent_data_process_info, \n",
     "                     metadata_process_info, \n",
     "                     day001_popularity_threshold = percentile_used)\n",
     "    # tune parameter\n",
     "    logger.info('Tune parameter for day {}'.format(day))\n",
+    "    print('Tune parameter for day {}'.format(day)\n",
     "    cv_func.parameter_tunning(model_name, \n",
     "                          params_tunning_dict, \n",
     "                          percent_data_process_info,\n",
@@ -183,6 +185,7 @@
     "    \n",
     "    # make prediction\n",
     "    logger.info('Making prediction for day {}'.format(day))\n",
+    "    print('Making prediction for day {}'.format(day))\n",
     "    cv_func.predict_new_titles(model_name_list, \n",
     "                               params_dict, \n",
     "                               percent_data_process_info)\n",
@@ -190,21 +193,46 @@
     "    # process the output\n",
     "    cur_new_title_output = cv_func.new_title_output\n",
     "    pred_column = cur_new_title_output.columns[cur_new_title_output.columns.str.contains('lgb')][0]\n",
-    "    pred_day = int(pred_column.split('_')[1])\n",
-    "    cur_new_title_output['pred_day'] = pred_day\n",
+    "    cur_new_title_output['pred_day'] = day\n",
     "    cur_new_title_output = cur_new_title_output.rename(columns = {pred_column:'percent_view_pred'})\n",
+    "    \n",
+    "    # process the existing titles\n",
+    "    cur_existing_title_output = cv_func.output\n",
+    "    pred_column = cur_existing_title_output.columns[cur_existing_title_output.columns.str.contains('lgb')][0]\n",
+    "    cur_existing_title_output['pred_day'] = day\n",
+    "    cur_existing_title_output = cur_existing_title_output.rename(columns = {pred_column:'percent_view_pred'})\n",
     "    \n",
     "    if output_flag:\n",
     "        new_title_output = pd.concat([new_title_output,cur_new_title_output], axis = 0)\n",
+    "        existing_title_output = pd.concat([existing_title_output, cur_existing_title_output], axis = 0)\n",
     "    else:\n",
     "        new_title_output = cur_new_title_output\n",
+    "        existing_title_output = cur_existing_title_output\n",
     "        output_flag = True\n",
-    "        \n",
+    "          \n",
+    "# final formatting        \n",
     "new_title_output = new_title_output.drop(columns = ['target']).sort_values(['title_name','pred_day'])\n",
-    "new_title_output = new_title_output[['title_name','match_id'\n",
-    "                                     ,'match_id_platform','platform_name'\n",
-    "                                     , 'program_type'\n",
-    "                                     ,'pred_day', 'percent_view_pred']]\n"
+    "new_title_output = new_title_output[['title_name'\n",
+    "                                     ,'match_id'\n",
+    "                                     ,'match_id_platform'\n",
+    "                                     ,'platform_name'\n",
+    "                                     ,'program_type'\n",
+    "                                     ,'pred_day'\n",
+    "                                     ,'percent_view_pred']]\n",
+    "          \n",
+    "existing_title_output = existing_title_output.sort_values(['match_id_platform','pred_day'])\n",
+    "existing_title_output['platform_name'] = existing_title_output['match_id_platform'].apply(lambda x: x[0])\n",
+    "existing_title_output = existing_title_output[['title_name'\n",
+    "                                               ,'match_id'\n",
+    "                                               ,'match_id_platform'\n",
+    "                                               ,'platform_name'\n",
+    "                                               ,'program_type'\n",
+    "                                               ,'target'\n",
+    "                                               ,'pred_day'\n",
+    "                                               ,'percent_view_pred'\n",
+    "                                               ,'smape_lgb'\n",
+    "                                               ,'mae_lgb'\n",
+    "                                               ,'fold']]"
    ]
   },
   {
@@ -238,7 +266,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logger.info('Writing prediction over time to S3 as an csv file')\n",
+    "logger.info('Writing new title predictions over time to S3 as an csv file')\n",
+    "print('Writing new title predictions over time to S3 as an csv file')\n",
     "csv_buffer = io.StringIO()\n",
     "new_title_output.to_csv(csv_buffer, index = False)\n",
     "content = csv_buffer.getvalue()\n",
@@ -253,7 +282,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "logger.info('Writing existing title predictions over time to S3 as an csv file')\n",
+    "print('Writing existing title predictions over time to S3 as an csv file')\n",
+    "csv_buffer = io.StringIO()\n",
+    "existing_title_output.to_csv(csv_buffer, index = False)\n",
+    "content = csv_buffer.getvalue()\n",
+    "\n",
+    "filename = 'new_title_prediction.csv'\n",
+    "\n",
+    "to_s3(filename, content)"
+   ]
   }
  ],
  "metadata": {
