--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -171,7 +171,7 @@
     "                     day001_popularity_threshold = percentile_used)\n",
     "    # tune parameter\n",
     "    logger.info('Tune parameter for day {}'.format(day))\n",
-    "    print('Tune parameter for day {}'.format(day)\n",
+    "    print('Tune parameter for day {}'.format(day))\n",
     "    cv_func.parameter_tunning(model_name, \n",
     "                          params_tunning_dict, \n",
     "                          percent_data_process_info,\n",
