--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -289,7 +289,7 @@
     "existing_title_output.to_csv(csv_buffer, index = False)\n",
     "content = csv_buffer.getvalue()\n",
     "\n",
-    "filename = 'new_title_prediction.csv'\n",
+    "filename = 'existing_title_prediction.csv'\n",
     "\n",
     "to_s3(filename, content)"
    ]
