Dev layout parameters.json (#205)
* added lib to DAP testing

* Added codeowners team

* Develop (#21)

* added lib for DAP Testing

* Update CODEOWNERS

* Add first files for postlaunch DAG using python script (#2)

* Change upstream reference and parameter filename (#3)

* Rename file for airflow to work (#4)

* Remove library reference (#5)

* Change reference of prod to dev for test (#6)

* Set up env based parameters for dev (#7)

* Add missing role (#8)

* Add initial SQL of sub base update (#9)

* Fix typo with uneeded equality (#10)

* Add absolute path reference (#11)

* Capitalize some variables (#12)

* Add metric query (#13)

* Add missing SQL file (#14)

* Fix path (#15)

* Add missing import (#16)

* Change variable name and pylint fixes (#17)

* Add file extension missing (#18)

* Change stream table to viewership table to match sql (#19)

* Remove table literals as we dont fill params via snowflake (#20)

* Develop merge (#22)

* Update post_launch_metrics.json

* Update post_launch_metrics.json

* Update CODEOWNERS (#23)

* Update CODEOWNERS (#24)

Co-authored-by: CloudOpsJenkins <dapadmin&support@hbo.com>
Co-authored-by: Bobby484 <61495339+Bobby484@users.noreply.github.com>
Co-authored-by: jonnyhbo <70723253+jonnyhbo@users.noreply.github.com>

* Mc local dev (#57) (#58)

* Mc local dev (#57)

* added lib for DAP Testing

* Production Changes (#1)

* init changes

* latest changes

* Update dag_generator.py

* Changed path

* updated bucket name

* added lib to DAP testing

* Adding code owners

Co-authored-by: CloudOpsJenkins <dapadmin&support@hbo.com>

* Update CODEOWNERS

* Add first files for postlaunch DAG using python script (#2)

* Change upstream reference and parameter filename (#3)

* Rename file for airflow to work (#4)

* Remove library reference (#5)

* Change reference of prod to dev for test (#6)

* Set up env based parameters for dev (#7

--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -69,7 +69,7 @@
     "logger.info(f'Loading inputs')\n",
     "\n",
     "s3 = boto3.resource('s3')\n",
-    "bucket = s3.Bucket('hbo-ingest-datascience-content-dev')\n",
+    "bucket = s3.Bucket(input_bucket)\n",
     "# Iterates through all the objects, doing the pagination for you. Each obj\n",
     "# is an ObjectSummary, so it doesn't contain the body. You'll need to call\n",
     "# get to get the whole body.\n",
@@ -255,9 +255,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def to_s3(filename, content):\n",
+    "def to_s3(filename, output_bucket, content):\n",
     "    client = boto3.client('s3')\n",
-    "    client.put_object(Bucket='hbo-outbound-datascience-content-dev', Key=filename, Body=content)"
+    "    client.put_object(Bucket=output_bucket, Key=filename, Body=content)"
    ]
   },
   {
@@ -274,7 +274,7 @@
     "\n",
     "filename = 'new_title_prediction.csv'\n",
     "\n",
-    "to_s3(filename, content)"
+    "to_s3(filename, output_bucket, content)"
    ]
   },
   {
@@ -291,7 +291,7 @@
     "\n",
     "filename = 'existing_title_prediction.csv'\n",
     "\n",
-    "to_s3(filename, content)"
+    "to_s3(filename, output_bucket, content)"
    ]
   }
  ],
