hotfix to input data reading process (#239)

--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -70,6 +70,8 @@
     "\n",
     "s3 = boto3.resource('s3')\n",
     "bucket = s3.Bucket(input_bucket)\n",
+    "\n",
+    "data_list = []\n",
     "# Iterates through all the objects, doing the pagination for you. Each obj\n",
     "# is an ObjectSummary, so it doesn't contain the body. You'll need to call\n",
     "# get to get the whole body.\n",
@@ -79,34 +81,15 @@
     "        logger.info('Loading csv file {}'.format(key))\n",
     "        body = obj.get()['Body']\n",
     "        var_name = key.split('.')[0]\n",
-    "        exec(\"{}=pd.read_csv(body, na_values = [r'\\\\\\\\N'])\".format(var_name))\n",
-    "        exec(\"{}.columns = {}.columns.str.lower()\".format(var_name, var_name))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "funnel_metric_feature = funnel_metric_feature.loc[:,funnel_metric_feature.isnull().sum()!=funnel_metric_feature.shape[0]]\n",
-    "vtp_feature = vtp_feature.loc[:,vtp_feature.isnull().sum()!=vtp_feature.shape[0]]\n",
-    "sub_total_feature = sub_total_feature.loc[:,sub_total_feature.isnull().sum()!=sub_total_feature.shape[0]]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "percentile_used = 0.8\n",
-    "data_list = [funnel_metric_feature, \n",
-    "             metadata_feature, \n",
-    "             mp_click_prelaunch_feature, \n",
-    "             trailer_feature, \n",
-    "             sub_total_feature,\n",
-    "             vtp_feature]"
+    "        print('Reading {0} features'.format(var_name))\n",
+    "        exec(\"{0}=pd.read_csv(body, na_values = [r'\\\\\\\\N'])\".format(var_name))\n",
+    "        exec(\"{0}.columns = {0}.columns.str.lower()\".format(var_name))\n",
+    "        \n",
+    "        # exclude the full null columns\n",
+    "        exec(\"{0} = {0}.loc[:,{0}.isnull().sum()!={0}.shape[0]]\".format(var_name))\n",
+    "        \n",
+    "        # append the feature df\n",
+    "        exec(\"data_list.append({0})\".format(var_name))"
    ]
   },
   {
@@ -119,6 +102,7 @@
    "source": [
     "# start a object\n",
     "logger.info('Setting up the prediction model')\n",
+    "percentile_used = 0.8\n",
     "nfold = 10\n",
     "cv_func = ModelMain(data_list, metadata_process_info['label_columns'], metadata_process_info['num_columns'])\n",
     "# movie only\n",
