--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -75,7 +75,7 @@
     "# Iterates through all the objects, doing the pagination for you. Each obj\n",
     "# is an ObjectSummary, so it doesn't contain the body. You'll need to call\n",
     "# get to get the whole body.\n",
-    "for obj in bucket.objects.all():\n",
+    "for obj in bucket.objects.filter(Prefix='input_percent_view'):\n",
     "    key = obj.key\n",
     "    if 'sagemaker' not in key:\n",
     "        logger.info('Loading csv file {}'.format(key))\n",
@@ -256,7 +256,7 @@
     "new_title_output.to_csv(csv_buffer, index = False)\n",
     "content = csv_buffer.getvalue()\n",
     "\n",
-    "filename = 'new_title_prediction.csv'\n",
+    "filename = 'output_percent_view/new_title_prediction.csv'\n",
     "\n",
     "to_s3(filename, output_bucket, content)"
    ]
@@ -273,7 +273,7 @@
     "existing_title_output.to_csv(csv_buffer, index = False)\n",
     "content = csv_buffer.getvalue()\n",
     "\n",
-    "filename = 'existing_title_prediction.csv'\n",
+    "filename = 'output_percent_view/existing_title_prediction.csv'\n",
     "\n",
     "to_s3(filename, output_bucket, content)"
    ]
