--- a/Sagemaker_Models/hourspct_predictions/pct_hours_prediction.ipynb
+++ b/Sagemaker_Models/hourspct_predictions/pct_hours_prediction.ipynb
@@ -102,12 +102,13 @@
     "for cnt in range(len(data_list)):\n",
     "    data_list[cnt].columns = data_list[cnt].columns.str.lower().str.replace(\"'\", \"\")\n",
     "\n",
-    "df = self.data_list[0]\n",
+    "df = data_list[0]\n",
     "\n",
-    "for data in self.data_list[1:]:\n",
+    "for data in data_list[1:]:\n",
     "    df = df.merge(data, how = 'outer', on = 'match_id')\n",
     "\n",
-    "df.columns = df.columns.str.lower()"
+    "df.columns = df.columns.str.lower()\n",
+    "df = df.loc[~(df.hourspct14d.isnull() | df_allcol.hourspct7d.isnull())]"
    ]
   },
   {
