Dev/buckets foldes (#274)
* bucket update

* hotfix to bucket data reading

--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -80,7 +80,7 @@
     "    if 'sagemaker' not in key:\n",
     "        logger.info('Loading csv file {}'.format(key))\n",
     "        body = obj.get()['Body']\n",
-    "        var_name = key.split('.')[0]\n",
+    "        var_name = key.split('.')[0].split('/')[1]\n",
     "        print('Reading {0} features'.format(var_name))\n",
     "        exec(\"{0}=pd.read_csv(body, na_values = [r'\\\\\\\\N'])\".format(var_name))\n",
     "        exec(\"{0}.columns = {0}.columns.str.lower()\".format(var_name))\n",
