--- a/Sagemaker_Models/hourspct_predictions/pct_hours_prediction.ipynb
+++ b/Sagemaker_Models/hourspct_predictions/pct_hours_prediction.ipynb
@@ -108,7 +108,7 @@
     "    df = df.merge(data, how = 'outer', on = 'match_id')\n",
     "\n",
     "df.columns = df.columns.str.lower()\n",
-    "df = df.loc[~(df.hourspct14d.isnull() | df_allcol.hourspct7d.isnull())]"
+    "df = df.loc[~(df.hourspct14d.isnull() | df.hourspct7d.isnull())]"
    ]
   },
   {
