--- a/Sagemaker_Models/hourspct_predictions/pct_hours_prediction.ipynb
+++ b/Sagemaker_Models/hourspct_predictions/pct_hours_prediction.ipynb
@@ -130,7 +130,7 @@
     "            ,errors='ignore')\n",
     "\n",
     "df['wm_enterprise_genres_agg'] = df.wm_enterprise_genres_agg.fillna('nan').apply(lambda x: x.replace(' |', '|').replace('| ', '|'))\n",
-    "df['launch_time'] = (pd.to_datetime(df['hbo_offer_date']) - pd.to_datetime('2020-05-27')).dt.days\n"
+    "df['launch_time'] = (pd.to_datetime(df['earliest_offered_timestamp']) - pd.to_datetime('2020-05-27')).dt.days\n"
    ]
   },
   {
@@ -153,7 +153,7 @@
    "outputs": [],
    "source": [
     "glist = set()\n",
-    "for item in list(df.WM_ENTERPRISE_GENRES_AGG):\n",
+    "for item in list(df.wm_enterprise_genres_agg):\n",
     "    glist = glist | set(item.split('|'))\n",
     "if '' in glist:\n",
     "    glist.remove('')\n",
@@ -161,13 +161,13 @@
     "\n",
     "\n",
     "for match_id in df.index:\n",
-    "    genres = df.loc[match_id, 'WM_ENTERPRISE_GENRES_AGG'].split('|')\n",
+    "    genres = df.loc[match_id, 'wm_enterprise_genres_agg'].split('|')\n",
     "    if '' in genres:\n",
     "        genres.remove('')\n",
     "    genre_cols.loc[match_id, genres] = 1\n",
     "    \n",
     "genre_cols = genre_cols.add_prefix('genre_').fillna(0)\n",
-    "df = pd.concat([df, genre_cols], axis=1).drop(columns='WM_ENTERPRISE_GENRES_AGG')"
+    "df = pd.concat([df, genre_cols], axis=1).drop(columns='wm_enterprise_genres_agg')"
    ]
   },
   {
@@ -176,13 +176,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.loc[df.PROGRAM_TYPE=='unknown', 'program_type'] = np.nan\n",
-    "df.loc[df.PROGRAM_TYPE=='acquired', 'program_type'] = 0\n",
-    "df.loc[df.PROGRAM_TYPE=='original', 'program_type'] = 1\n",
+    "df.loc[df.program_type=='unknown', 'program_type'] = np.nan\n",
+    "df.loc[df.program_type=='acquired', 'program_type'] = 0\n",
+    "df.loc[df.program_type=='original', 'program_type'] = 1\n",
     "\n",
-    "df.loc[df.CONTENT_CATEGORY=='special', 'content_category'] = 0\n",
-    "df.loc[df.CONTENT_CATEGORY=='movies', 'content_category'] = 0\n",
-    "df.loc[df.CONTENT_CATEGORY=='series', 'content_category'] = 1\n",
+    "df.loc[df.content_category=='special', 'content_category'] = 0\n",
+    "df.loc[df.content_category=='movies', 'content_category'] = 0\n",
+    "df.loc[df.content_category=='series', 'content_category'] = 1\n",
     "\n",
     "\n",
     "df = df.rename(columns={'program_type': 'is_original', 'content_category': 'is_series'})\n",
