--- a/Sagemaker_Models/hourspct_predictions/pct_hours_prediction.ipynb
+++ b/Sagemaker_Models/hourspct_predictions/pct_hours_prediction.ipynb
@@ -121,8 +121,7 @@
     "# only use shows with at least 28d history\n",
     "df = df.loc[~df.hourspct28d.isnull()]\n",
     "\n",
-    "df = df.drop(columns=['earliest_offered_timestamp',\n",
-    "                     'licensor_agg',\n",
+    "df = df.drop(columns=['licensor_agg',\n",
     "                     'match_id_platform',\n",
     "                     'navigation_genre_desc_agg',\n",
     "                     'descriptive_genre_desc_agg',\n",
