--- a/Sagemaker_Models/hourspct_predictions/pct_hours_prediction.ipynb
+++ b/Sagemaker_Models/hourspct_predictions/pct_hours_prediction.ipynb
@@ -179,8 +179,9 @@
     "df.loc[df.program_type=='acquired', 'program_type'] = 0\n",
     "df.loc[df.program_type=='original', 'program_type'] = 1\n",
     "\n",
-    "df.loc[df.content_category=='special', 'content_category'] = 0\n",
-    "df.loc[df.content_category=='movies', 'content_category'] = 0\n",
+    "#df.loc[df.content_category=='special', 'content_category'] = 0\n",
+    "#df.loc[df.content_category=='movies', 'content_category'] = 0\n",
+    "df.loc[df.content_category!='series', 'content_category'] = 0\n",
     "df.loc[df.content_category=='series', 'content_category'] = 1\n",
     "\n",
     "\n",
