--- a/Sagemaker_Models/hourspct_predictions/pct_hours_prediction.ipynb
+++ b/Sagemaker_Models/hourspct_predictions/pct_hours_prediction.ipynb
@@ -15,7 +15,9 @@
     "import boto3\n",
     "import sys\n",
     "import datetime\n",
-    "from scipy.special import logit, expit\n"
+    "from scipy.special import logit, expit\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score, KFold, GridSearchCV, RandomizedSearchCV\n",
+    "from xgboost.sklearn import XGBRegressor\n"
    ]
   },
   {
