--- a/Sagemaker_Models/hourspct_predictions/pct_hours_prediction.ipynb
+++ b/Sagemaker_Models/hourspct_predictions/pct_hours_prediction.ipynb
@@ -199,7 +199,8 @@
    "outputs": [],
    "source": [
     "df_fulldata = df.loc[~df.hourspct52w.isnull()]\n",
-    "df_fulldata = df_fulldata.drop(df_fulldata.loc[df_fulldata.hourspct52w==0].index)"
+    "df_fulldata = df_fulldata.drop(df_fulldata.loc[df_fulldata.hourspct52w==0].index)\n",
+    "logger.info(f'df columns: {list(df_fulldata.columns)}')"
    ]
   },
   {
@@ -230,15 +231,10 @@
     "         'at_release_year',\n",
     "         'dayofweek_earliest_date',\n",
     "         'total_hours',\n",
-    "         'scripted_flag',\n",
-    "         'sports_flag',\n",
-    "         'kids_flag',\n",
-    "         'international_flag',\n",
-    "         'latino_flag',\n",
     "         'prod_release_year',\n",
     "         'title_age_approx',\n",
     "         'content_cost',\n",
-    "         'ln_total_click_from_marketing_spend',\n",
+    "         'ln_total_media_cost_pre_launch',\n",
     "         'min_days_since_offered',\n",
     "         'launch_time',\n",
     "         'genre_sports',\n",
