--- a/Sagemaker_Models/hourspct_predictions/pct_hours_prediction.ipynb
+++ b/Sagemaker_Models/hourspct_predictions/pct_hours_prediction.ipynb
@@ -331,7 +331,8 @@
     "#TODO df formatting for table\n",
     "\n",
     "df_pred_52w['prediction_date'] = TARGET_DATE\n",
-    "df_pred_52w['window_days'] = 364\n"
+    "df_pred_52w['window_days'] = 28\n",
+    "df_pred_52w = df_pred_52w.reset_index()"
    ]
   },
   {
