--- a/Sagemaker_Models/hourspct_predictions/pct_hours_prediction.ipynb
+++ b/Sagemaker_Models/hourspct_predictions/pct_hours_prediction.ipynb
@@ -110,7 +110,7 @@
     "    df = df.merge(data, how = 'outer', on = 'match_id')\n",
     "\n",
     "df.columns = df.columns.str.lower()\n",
-    "df = df.loc[~(df.hourspct14d.isnull() | df.hourspct7d.isnull())]"
+    "df = df.set_index('match_id')"
    ]
   },
   {
@@ -119,9 +119,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO relax data requirement once we verify accuracy is acceptable\n",
-    "# only use shows with at least 28d history\n",
-    "df = df.loc[~df.hourspct28d.isnull()]\n",
+    "# only use shows with at least 14d history\n",
+    "df = df.loc[~(df.hourspct14d.isnull() | df.hourspct7d.isnull())]\n",
     "\n",
     "df = df.drop(columns=['licensor_agg',\n",
     "                     'match_id_platform',\n",
