--- a/Sagemaker_Models/hourspct_predictions/pct_hours_prediction.ipynb
+++ b/Sagemaker_Models/hourspct_predictions/pct_hours_prediction.ipynb
@@ -110,6 +110,7 @@
     "    df = df.merge(data, how = 'outer', on = 'match_id')\n",
     "\n",
     "df.columns = df.columns.str.lower()\n",
+    "df = df.loc[~df.match_id.duplicated()]\n",
     "df = df.set_index('match_id')"
    ]
   },
