--- a/Sagemaker_Models/hourspct_predictions/pct_hours_prediction.ipynb
+++ b/Sagemaker_Models/hourspct_predictions/pct_hours_prediction.ipynb
@@ -122,6 +122,9 @@
    "source": [
     "# only use shows with at least 14d history\n",
     "df = df.loc[~(df.hourspct14d.isnull() | df.hourspct7d.isnull())]\n",
+    "df['max_window'] = 14\n",
+    "df.loc[~df.hourspct21d.isnull(), 'max_window'] = 21\n",
+    "df.loc[~df.hourspct28d.isnull(), 'max_window'] = 28\n",
     "\n",
     "df = df.drop(columns=['licensor_agg',\n",
     "                     'match_id_platform',\n",
@@ -331,7 +334,7 @@
     "#TODO df formatting for table\n",
     "\n",
     "df_pred_52w['prediction_date'] = TARGET_DATE\n",
-    "df_pred_52w['window_days'] = 28\n",
+    "df_pred_52w['window_days'] = df.loc[df_pred52w.index, 'max_window']\n",
     "df_pred_52w = df_pred_52w.reset_index()"
    ]
   },
