--- a/Sagemaker_Models/hourspct_predictions/pct_hours_prediction.ipynb
+++ b/Sagemaker_Models/hourspct_predictions/pct_hours_prediction.ipynb
@@ -334,7 +334,7 @@
     "#TODO df formatting for table\n",
     "\n",
     "df_pred_52w['prediction_date'] = TARGET_DATE\n",
-    "df_pred_52w['window_days'] = df.loc[df_pred52w.index, 'max_window']\n",
+    "df_pred_52w['window_days'] = df.loc[df_pred_52w.index, 'max_window']\n",
     "df_pred_52w = df_pred_52w.reset_index()"
    ]
   },
