hofix to the prediction pipeline to avoid empty prediction title list (#310)

--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -23,7 +23,7 @@
     "from lib.config import metadata_process_info\n",
     "from lib.config import default_params_dict as params_dict\n",
     "from lib.config import model_name_list\n",
-    "from lib.config import params_tunning_dict"
+    "from lib.config import params_tuning_dict"
    ]
   },
   {
@@ -139,6 +139,8 @@
     "percent_data_process_info['exact_X_pred'] = False\n",
     "output_flag = False\n",
     "percent_data_process_info_copy = dict(percent_data_process_info)\n",
+    "new_title_output = pd.DataFrame()\n",
+    "existing_title_output = pd.DataFrame()\n",
     "\n",
     "for day in range(0,27):\n",
     "    # renew the percent_data_process_info data very time\n",
@@ -153,15 +155,20 @@
     "    cv_func.get_X_y(percent_data_process_info, \n",
     "                     metadata_process_info, \n",
     "                     day001_popularity_threshold = percentile_used)\n",
+    "\n",
+    "    if cv_func.pred_empty_flag == True:\n",
+    "        print('no title needs to be predicted at day {}'.format(day))\n",
+    "        continue\n",
+    "    \n",
     "    # tune parameter\n",
     "    logger.info('Tune parameter for day {}'.format(day))\n",
     "    print('Tune parameter for day {}'.format(day))\n",
-    "    cv_func.parameter_tunning(model_name, \n",
-    "                          params_tunning_dict, \n",
+    "    cv_func.parameter_tuning(model_name, \n",
+    "                          params_tuning_dict, \n",
     "                          percent_data_process_info,\n",
     "                          nfold = nfold)\n",
     "    params_dict = cv_func.min_smape_param['min_smape_original']\n",
-    "    param_stats = cv_func.parameter_tunning_stats\n",
+    "    param_stats = cv_func.parameter_tuning_stats\n",
     "    logger.info('SMAPE for all titles {}'.format(param_stats['min_smape_all']))\n",
     "    logger.info('SMAPE for the originals {}'.format(param_stats['min_smape_original']))\n",
     "    print('SMAPE for all titles {}'.format(param_stats['min_smape_all']))\n",
@@ -194,29 +201,32 @@
     "        existing_title_output = cur_existing_title_output\n",
     "        output_flag = True\n",
     "          \n",
-    "# final formatting        \n",
-    "new_title_output = new_title_output.drop(columns = ['target']).sort_values(['title_name','pred_day'])\n",
-    "new_title_output = new_title_output[['title_name'\n",
-    "                                     ,'match_id'\n",
-    "                                     ,'match_id_platform'\n",
-    "                                     ,'platform_name'\n",
-    "                                     ,'program_type'\n",
-    "                                     ,'pred_day'\n",
-    "                                     ,'percent_view_pred']]\n",
-    "          \n",
-    "existing_title_output = existing_title_output.sort_values(['match_id_platform','pred_day'])\n",
-    "existing_title_output['platform_name'] = existing_title_output['match_id_platform'].apply(lambda x: x[0])\n",
-    "existing_title_output = existing_title_output[['title_name'\n",
-    "                                               ,'match_id'\n",
-    "                                               ,'match_id_platform'\n",
-    "                                               ,'platform_name'\n",
-    "                                               ,'program_type'\n",
-    "                                               ,'target'\n",
-    "                                               ,'pred_day'\n",
-    "                                               ,'percent_view_pred'\n",
-    "                                               ,'smape_lgb'\n",
-    "                                               ,'mae_lgb'\n",
-    "                                               ,'fold']]"
+    "# final formatting\n",
+    "\n",
+    "if new_title_output.shape[0]>0:    \n",
+    "    new_title_output = new_title_output.drop(columns = ['target']).sort_values(['title_name','pred_day'])\n",
+    "    new_title_output = new_title_output[['title_name'\n",
+    "                                        ,'match_id'\n",
+    "                                        ,'match_id_platform'\n",
+    "                                        ,'platform_name'\n",
+    "                                        ,'program_type'\n",
+    "                                        ,'pred_day'\n",
+    "                                        ,'percent_view_pred']]\n",
+    "\n",
+    "if existing_title_output.shape[0]>0:           \n",
+    "    existing_title_output = existing_title_output.sort_values(['match_id_platform','pred_day'])\n",
+    "    existing_title_output['platform_name'] = existing_title_output['match_id_platform'].apply(lambda x: x[0])\n",
+    "    existing_title_output = existing_title_output[['title_name'\n",
+    "                                                ,'match_id'\n",
+    "                                                ,'match_id_platform'\n",
+    "                                                ,'platform_name'\n",
+    "                                                ,'program_type'\n",
+    "                                                ,'target'\n",
+    "                                                ,'pred_day'\n",
+    "                                                ,'percent_view_pred'\n",
+    "                                                ,'smape_lgb'\n",
+    "                                                ,'mae_lgb'\n",
+    "                                                ,'fold']]"
    ]
   },
   {
