--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -77,19 +77,18 @@
     "# get to get the whole body.\n",
     "for obj in bucket.objects.filter(Prefix='input_percent_view'):\n",
     "    key = obj.key\n",
-    "    if 'sagemaker' not in key:\n",
-    "        logger.info('Loading csv file {}'.format(key))\n",
-    "        body = obj.get()['Body']\n",
-    "        var_name = key.split('.')[0].split('/')[1]\n",
-    "        print('Reading {0} features'.format(var_name))\n",
-    "        exec(\"{0}=pd.read_csv(body, na_values = [r'\\\\\\\\N'])\".format(var_name))\n",
-    "        exec(\"{0}.columns = {0}.columns.str.lower()\".format(var_name))\n",
-    "        \n",
-    "        # exclude the full null columns\n",
-    "        exec(\"{0} = {0}.loc[:,{0}.isnull().sum()!={0}.shape[0]]\".format(var_name))\n",
-    "        \n",
-    "        # append the feature df\n",
-    "        exec(\"data_list.append({0})\".format(var_name))"
+    "    logger.info('Loading csv file {}'.format(key))\n",
+    "    body = obj.get()['Body']\n",
+    "    var_name = key.split('.')[0].split('/')[1]\n",
+    "    print('Reading {0} features'.format(var_name))\n",
+    "    exec(\"{0}=pd.read_csv(body, na_values = [r'\\\\\\\\N'])\".format(var_name))\n",
+    "    exec(\"{0}.columns = {0}.columns.str.lower()\".format(var_name))\n",
+    "    \n",
+    "    # exclude the full null columns\n",
+    "    exec(\"{0} = {0}.loc[:,{0}.isnull().sum()!={0}.shape[0]]\".format(var_name))\n",
+    "    \n",
+    "    # append the feature df\n",
+    "    exec(\"data_list.append({0})\".format(var_name))"
    ]
   },
   {
@@ -291,21 +290,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Python 3.7.3 64-bit ('usr')",
+   "name": "python373jvsc74a57bd05edc29c2ed010d6458d71a83433b383a96a8cbd3efe8531bc90c4b8a5b8bcec9"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": ""
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "5edc29c2ed010d6458d71a83433b383a96a8cbd3efe8531bc90c4b8a5b8bcec9"
+   }
   }
  },
  "nbformat": 4,
