Dev trail plain (#365)
* trailer hotfix

* trailer version

--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -141,20 +141,30 @@
     "new_title_output = pd.DataFrame()\n",
     "existing_title_output = pd.DataFrame()\n",
     "\n",
-    "for day in range(0,27):\n",
+    "for day in range(-27,27):\n",
     "    # renew the percent_data_process_info data very time\n",
     "    from lib.config import percent_data_process_info\n",
+    "    from lib.config import prelaunch_process_info\n",
+    "    from lib.config import metadata_process_info\n",
+    "\n",
+    "    # determine prelaunch or postlaunch\n",
+    "    if day < 1:\n",
+    "        input_process_info = prelaunch_process_info\n",
+    "        input_percentile_used = 1\n",
+    "    else:\n",
+    "        input_process_info = metadata_process_info\n",
+    "        input_percentile_used = percentile_used\n",
+    "\n",
     "    # just to make the values in the dict back to the initial values\n",
     "    percent_data_process_info = dict(percent_data_process_info_copy)\n",
     "    percent_data_process_info['max_num_day'] = day\n",
     "    \n",
     "    # get x and y\n",
     "    logger.info('Get X and y for day {}'.format(day))\n",
-    "    print('Get X and y for day {}'.format(day))\n",
     "    cv_func.get_X_y(percent_data_process_info, \n",
-    "                     metadata_process_info, \n",
-    "                     day001_popularity_threshold = percentile_used)\n",
-    "\n",
+    "                     input_process_info, \n",
+    "                     day001_popularity_threshold = input_percentile_used)\n",
+    "                     \n",
     "    if cv_func.pred_empty_flag == True:\n",
     "        print('no title needs to be predicted at day {}'.format(day))\n",
     "        continue\n",
@@ -166,6 +176,7 @@
     "                          params_tuning_dict, \n",
     "                          percent_data_process_info,\n",
     "                          nfold = nfold)\n",
+    "\n",
     "    params_dict = cv_func.min_smape_param['min_smape_original']\n",
     "    param_stats = cv_func.parameter_tuning_stats\n",
     "    logger.info('SMAPE for all titles {}'.format(param_stats['min_smape_all']))\n",
