Dev trail plain (#369)
* trailer hotfix

* trailer version

* hotfix

* hotifx

* hotfix

* hotfix

--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -149,6 +149,7 @@
     "\n",
     "    # determine prelaunch or postlaunch\n",
     "    if day < 1:\n",
+    "        percent_data_process_info['log_ratio_transformation'] = False\n",
     "        input_process_info = prelaunch_process_info\n",
     "        input_percentile_used = 1\n",
     "    else:\n",
