Dev trail plain (#372)
* trailer hotfix

* trailer version

* hotfix

* hotifx

* hotfix

* hotfix

* hotfix

* hotfix

* hotfix

--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -148,10 +148,10 @@
     "\n",
     "    # determine prelaunch or postlaunch\n",
     "    if day < 1:\n",
-    "        input_process_info = prelaunch_process_info\n",
+    "        input_process_info = dict(prelaunch_process_info)\n",
     "        input_percentile_used = 1\n",
     "    else:\n",
-    "        input_process_info = metadata_process_info\n",
+    "        input_process_info = dict(metadata_process_info)\n",
     "        input_percentile_used = percentile_used\n",
     "\n",
     "    # just to make the values in the dict back to the initial values\n",
